--- a/src/MSBuild/Resources/Strings.resx
+++ b/src/MSBuild/Resources/Strings.resx
@@ -470,7 +470,8 @@
    <value>  -outputResultsCache:[cacheFile]
                      Output cache file where MSBuild will write the contents of
                      its build result caches at the end of the build.
-                     Setting this also turns on isolated builds (-isolate).
+                     If the isolation mode is not explicitly already set to IsolateProjects.False,
+                     this sets the isolation mode to IsolateProjects.True. (-isolate).
                      (short form: -orc)
    </value>
     <comment>
@@ -483,7 +484,8 @@
    <value>  -inputResultsCaches:&lt;cacheFile&gt;...
                      Semicolon separated list of input cache files that MSBuild
                      will read build results from.
-                     Setting this also turns on isolated builds (-isolate).
+                     If the isolation mode is not explicitly already set to IsolateProjects.False,
+                     this sets the isolation mode to IsolateProjects.True. (-isolate).
                      (short form: -irc)
    </value>
     <comment>
@@ -756,7 +758,7 @@
     </comment>
   </data>
   <data name="HelpMessage_35_IsolateProjectsSwitch" UESanitized="false" Visibility="Public">
-    <value>  -isolateProjects[:True|False]
+    <value>  -isolateProjects[:True|Message|False]
                      Causes MSBuild to build each project in isolation.
 
                      This is a more restrictive mode of MSBuild as it requires
@@ -764,6 +766,9 @@
                      evaluation time, but can improve scheduling and reduce
                      memory overhead when building a large set of projects.
                      (Short form: -isolate)
+
+                     When set to Message, all isolation violations are
+                     logged as messages.
 
                      This flag is experimental and may not work as intended.
     </value>
@@ -1187,7 +1192,7 @@
     <comment>
       {StrBegin="MSBUILD : error MSB1056: "}
       UE: This message does not need in-line parameters because the exception takes care of displaying the invalid arg.
-      This error is shown when a user specifies a value for the -isolateProjects parameter that is not equivalent to Boolean.TrueString or Boolean.FalseString.
+      This error is shown when a user specifies a value for the -isolateProjects parameter that is not equivalent to Boolean.TrueString, IsolateProjects.Message.toString(), or Boolean.FalseString.
       LOCALIZATION: The prefix "MSBUILD : error MSBxxxx:" should not be localized.
     </comment>
   </data>
