--- a/src/MSBuild/Resources/xlf/Strings.ko.xlf
+++ b/src/MSBuild/Resources/xlf/Strings.ko.xlf
@@ -116,12 +116,12 @@
                      value that comes from a response file.
     </source>
         <target state="translated">  -interactive[:True|False]
-                     빌드의 작업이 사용자와 상호 작용할 수 
-                     있음을 나타냅니다. 상호 작용이 필요하지 
-                     않은 자동화된 시나리오에서는 이 인수를 
+                     빌드의 작업이 사용자와 상호 작용할 수
+                     있음을 나타냅니다. 상호 작용이 필요하지
+                     않은 자동화된 시나리오에서는 이 인수를
                      사용하지 마세요.
                      -interactive를 지정하는 것은 -interactive:true를
-                     지정하는 것과 같습니다. 매개 변수를 
+                     지정하는 것과 같습니다. 매개 변수를
                      사용하여 지시 파일에서 가져오는 값을 재정의합니다.
     </target>
         <note>
@@ -130,7 +130,7 @@
     </note>
       </trans-unit>
       <trans-unit id="HelpMessage_35_IsolateProjectsSwitch">
-        <source>  -isolateProjects[:True|False]
+        <source>  -isolateProjects[:True|Message|False]
                      Causes MSBuild to build each project in isolation.
 
                      This is a more restrictive mode of MSBuild as it requires
@@ -139,14 +139,17 @@
                      memory overhead when building a large set of projects.
                      (Short form: -isolate)
 
+                     When set to Message, all isolation violations are
+                     logged as messages.
+
                      This flag is experimental and may not work as intended.
     </source>
-        <target state="translated">  -isolateProjects[:True|False]
+        <target state="needs-review-translation">  -isolateProjects[:True|Message|False]
                      MSBuild가 격리 모드에서 각 프로젝트를 빌드하도록 합니다.
 
-                     이 모드는 프로젝트 그래프가 평가 시간에 정적으로 
-                     검색 가능해야 하므로 더 제한적인 MSBuild 모드이나, 
-                     대규모 프로젝트를 빌드할 경우 예약을 개선하고 
+                     이 모드는 프로젝트 그래프가 평가 시간에 정적으로
+                     검색 가능해야 하므로 더 제한적인 MSBuild 모드이나,
+                     대규모 프로젝트를 빌드할 경우 예약을 개선하고
                      메모리 오버헤드를 줄일 수 있습니다.
                      (약식: -isolate)
 
@@ -173,9 +176,9 @@
         <target state="translated">  -graphBuild[:True|False]
                      MSBuild가 프로젝트 그래프를 생성 및 빌드하도록 합니다.
 
-                     그래프 생성에는 종속성을 형성하기 위한 프로젝트 
-                     참조 식별이 관련됩니다. 해당 그래프 빌드에는 프로젝트 
-                     참조를 참조하는 프로젝트 전에 프로젝트 참조를 
+                     그래프 생성에는 종속성을 형성하기 위한 프로젝트
+                     참조 식별이 관련됩니다. 해당 그래프 빌드에는 프로젝트
+                     참조를 참조하는 프로젝트 전에 프로젝트 참조를
                      빌드하는 시도가 관련되며, 이는 기존 MSBuild
                      예약과 다릅니다.
                      (약식: -graph)
@@ -229,7 +232,7 @@
         <target state="translated">  -lowPriority[:True|False]
                      MSBuild가 낮은 프로세스 우선 순위로 실행됩니다.
 
-                     -lowPriority를 지정하는 것은 
+                     -lowPriority를 지정하는 것은
                      -lowPriority:True를 지정하는 것과 같습니다.
                      (약식: -low)
     </target>
@@ -333,11 +336,11 @@
                      (1) the directory of msbuild.exe
                      (2) the directory of the first project or solution built
 </source>
-        <target state="translated">  @&lt;file&gt;            텍스트 파일에서 명령줄 설정을 삽입합니다. 
-                     여러 지시 파일을 지정하려면 각 지시 파일을 개별적으로 
+        <target state="translated">  @&lt;file&gt;            텍스트 파일에서 명령줄 설정을 삽입합니다.
+                     여러 지시 파일을 지정하려면 각 지시 파일을 개별적으로
                      지정합니다.
 
-                     "msbuild.rsp"라는 지시 파일이 다음 위치에서 
+                     "msbuild.rsp"라는 지시 파일이 다음 위치에서
                      자동으로 사용됩니다.
                      (1) msbuild.exe의 디렉터리
                      (2) 빌드된 첫 번째 프로젝트 또는 솔루션의 디렉터리
@@ -374,8 +377,8 @@
                      Example:
                        -target:Resources;Compile
 </source>
-        <target state="translated">  -target:&lt;targets&gt;  이 프로젝트에서 대상을 빌드합니다. 세미콜론 또는 쉼표를 사용하여 
-                     여러 대상을 구분하거나, 각 대상을 
+        <target state="translated">  -target:&lt;targets&gt;  이 프로젝트에서 대상을 빌드합니다. 세미콜론 또는 쉼표를 사용하여
+                     여러 대상을 구분하거나, 각 대상을
                      개별적으로 지정합니다. (약식: -t)
                      예:
                        -target:Resources;Compile
@@ -397,9 +400,9 @@
                      Example:
                        -property:WarningLevel=2;OutDir=bin\Debug\
 </source>
-        <target state="translated">  -property:&lt;n&gt;=&lt;v&gt;  프로젝트 수준 속성을 설정하거나 재정의합니다. &lt;n&gt;은 
-                     속성 이름이고 &lt;v&gt;는 속성 값입니다. 
-                     세미콜론 또는 쉼표를 사용하여 여러 속성을 구분하거나, 
+        <target state="translated">  -property:&lt;n&gt;=&lt;v&gt;  프로젝트 수준 속성을 설정하거나 재정의합니다. &lt;n&gt;은
+                     속성 이름이고 &lt;v&gt;는 속성 값입니다.
+                     세미콜론 또는 쉼표를 사용하여 여러 속성을 구분하거나,
                      각 속성을 개별적으로 지정합니다. (약식: -p)
                      예:
                        -property:WarningLevel=2;OutDir=bin\Debug\
@@ -584,10 +587,10 @@
                      Example:
                        -validate:MyExtendedBuildSchema.xsd
 </source>
-        <target state="translated">  -validate          기본 스키마를 기준으로 프로젝트의 유효성을 검사합니다. 
+        <target state="translated">  -validate          기본 스키마를 기준으로 프로젝트의 유효성을 검사합니다.
                      (약식: -val)
 
-  -validate:&lt;schema&gt; 지정된 스키마를 기준으로 프로젝트의 유효성을 검사합니다. 
+  -validate:&lt;schema&gt; 지정된 스키마를 기준으로 프로젝트의 유효성을 검사합니다.
                      (약식: -val)
                      예:
                        -validate:MyExtendedBuildSchema.xsd
@@ -649,7 +652,7 @@
                      (short form: -irc)
    </source>
         <target state="translated">  -inputResultsCaches:&lt;cacheFile&gt;...
-                     MSBuild가 빌드 결과를 읽는 소스 입력 캐시 파일의 
+                     MSBuild가 빌드 결과를 읽는 소스 입력 캐시 파일의
                      세미콜론으로 구분된 목록입니다.
                      이 스위치를 설정하면 격리된 빌드(-isolate)도 켜집니다.
                      (약식: -irc)
@@ -739,8 +742,8 @@
                        -ignoreProjectExtensions:.sln
     </source>
         <target state="translated">  -ignoreProjectExtensions:&lt;extensions&gt;
-                     빌드할 프로젝트 파일을 결정할 때 
-                     무시할 확장 목록입니다. 여러 확장을 구분하는 데는 
+                     빌드할 프로젝트 파일을 결정할 때
+                     무시할 확장 목록입니다. 여러 확장을 구분하는 데는
                      세미콜론 또는 쉼표를 사용합니다.
                      (약식: -ignore)
                      예:
@@ -766,7 +769,7 @@
    </source>
         <target state="translated">  -toolsVersion:&lt;version&gt;
                      빌드 중에 사용할 MSBuild 도구 세트(작업, 대상 등)의 버전입니다.
-                     이 버전은 개별 프로젝트에서 지정한 버전을 
+                     이 버전은 개별 프로젝트에서 지정한 버전을
                      재정의합니다. (약식:
                      -tv)
                      예:
@@ -795,9 +798,9 @@
                      파일은 현재 디렉터리에 있고
                      "msbuild[n].log"로 이름이 지정되어 있습니다. 모든 노드의 이벤트는 단일 로그로
                      결합됩니다. 파일의 위치 및 fileLogger의
-                     다른 매개 변수는 "-fileLoggerParameters[n]" 스위치를 
+                     다른 매개 변수는 "-fileLoggerParameters[n]" 스위치를
                      추가하여 지정할 수 있습니다.
-                     "n"은 1-9 사이의 숫자일 수 있으며 최대 10개의 
+                     "n"은 1-9 사이의 숫자일 수 있으며 최대 10개의
                      파일 로거가 추가될 수 있습니다. (약식: -fl[n])
     </target>
         <note>
@@ -824,16 +827,16 @@
                      create a log file for each node.
     </source>
         <target state="translated">  -distributedFileLogger
-                     MSBuild 노드당 로그 파일 하나씩, 여러 로그 파일에 빌드 출력을 
-                     기록합니다. 해당 파일의 초기 위치는 
-                     현재 디렉터리입니다. 기본적으로 해당 파일을 
-                     "MSBuild&lt;nodeid&gt;.log"라고 합니다. 파일 위치 및 fileLogger의 기타 매개 변수는 
-                     "-fileLoggerParameters" 스위치를 추가해서 
+                     MSBuild 노드당 로그 파일 하나씩, 여러 로그 파일에 빌드 출력을
+                     기록합니다. 해당 파일의 초기 위치는
+                     현재 디렉터리입니다. 기본적으로 해당 파일을
+                     "MSBuild&lt;nodeid&gt;.log"라고 합니다. 파일 위치 및 fileLogger의 기타 매개 변수는
+                     "-fileLoggerParameters" 스위치를 추가해서
                      지정할 수 있습니다.
 
-                     로그 파일 이름이 fileLoggerParameters 스위치를 통해 설정되면 
-                     배포된 로거가 fileName을 템플릿으로 사용하고 
-                     노드 ID를 이 fileName에 추가하여 
+                     로그 파일 이름이 fileLoggerParameters 스위치를 통해 설정되면
+                     배포된 로거가 fileName을 템플릿으로 사용하고
+                     노드 ID를 이 fileName에 추가하여
                      각 노드의 로그 파일을 만듭니다.
     </target>
         <note>
@@ -877,20 +880,20 @@
     </source>
         <target state="translated">  -fileLoggerParameters[n]:&lt;parameters&gt;
                      파일 로거의 추가 매개 변수를 제공합니다.
-                     이 스위치가 있다는 것은 
+                     이 스위치가 있다는 것은
                      해당 fileLogger[n] 스위치를 의미합니다.
                      "n"(있는 경우)은 1~9의 숫자일 수 있습니다.
-                     -fileLoggerParameters는 배포된 파일 로거에서도 
+                     -fileLoggerParameters는 배포된 파일 로거에서도
                      사용됩니다. -distributedFileLogger에 대한 설명을 참조하세요.
                      (약식: -flp[n])
                      콘솔 로거용으로 나열된 동일한 매개 변수를 사용할 수 있습니다.
                      다음과 같은 몇 가지 추가 매개 변수를 사용할 수 있습니다.
-                        LogFile--빌드 로그가 기록되는 
+                        LogFile--빌드 로그가 기록되는
                             로그 파일의 경로입니다.
-                        Append--빌드 로그가 로그 파일에 추가되는지, 
-                            아니면 로그 파일을 덮어쓰는지 여부를 결정합니다. 
+                        Append--빌드 로그가 로그 파일에 추가되는지,
+                            아니면 로그 파일을 덮어쓰는지 여부를 결정합니다.
                             스위치를 설정하면 빌드 로그가 로그 파일에 추가됩니다.
-                            스위치를 설정하지 않으면 기존 로그 파일의 
+                            스위치를 설정하지 않으면 기존 로그 파일의
                             콘텐츠를 덮어씁니다.
                             기본값은 로그 파일에 추가하지 않는 것입니다.
                         Encoding--파일의 인코딩을 지정합니다
@@ -927,7 +930,7 @@
         <target state="translated">  -nodeReuse:&lt;parameters&gt;
                      MSBuild 노드를 다시 사용하거나 다시 사용하지 않도록 설정합니다.
                      매개 변수는 다음가 같습니다.
-                     True --빌드 완료 후 노드가 유지되고 
+                     True --빌드 완료 후 노드가 유지되고
                             후속 빌드에서 다시 사용됩니다(기본값).
                      False--빌드 완료 후 노드가 유지되지 않습니다.
                      (약식: -nr)
@@ -1024,11 +1027,11 @@
       </trans-unit>
       <trans-unit id="InvalidIsolateProjectsValue">
         <source>MSBUILD : error MSB1056: Isolate projects value is not valid. {0}</source>
-        <target state="translated">MSBUILD : error MSB1056: 프로젝트 격리 값이 유효하지 않습니다. {0}</target>
+        <target state="needs-review-translation">MSBUILD : error MSB1056: 프로젝트 격리 값이 유효하지 않습니다. {0}</target>
         <note>
       {StrBegin="MSBUILD : error MSB1056: "}
       UE: This message does not need in-line parameters because the exception takes care of displaying the invalid arg.
-      This error is shown when a user specifies a value for the -isolateProjects parameter that is not equivalent to Boolean.TrueString or Boolean.FalseString.
+      This error is shown when a user specifies a value for the -isolateProjects parameter that is not equivalent to Boolean.TrueString, IsolateProjects. Boolean.FalseString.
       LOCALIZATION: The prefix "MSBUILD : error MSBxxxx:" should not be localized.
     </note>
       </trans-unit>
@@ -1692,10 +1695,10 @@
     </source>
         <target state="translated">  -restore[:True|False]
                      다른 대상을 빌드하기 전에 Restore라는 대상을
-                     실행하고 이러한 대상의 빌드에 최신 복원된 
-                     빌드 논리가 사용되는지 확인합니다. 
-                     프로젝트 트리를 빌드하기 전에 
-                     프로젝트 트리에서 패키지를 복원해야 하는 
+                     실행하고 이러한 대상의 빌드에 최신 복원된
+                     빌드 논리가 사용되는지 확인합니다.
+                     프로젝트 트리를 빌드하기 전에
+                     프로젝트 트리에서 패키지를 복원해야 하는
                      경우에 유용합니다. -restore를 지정하는 것은
                      -restore:True를 지정하는 것과 동일합니다. 이 매개 변수를 사용하여
                      지시 파일에서 가져오는 값을 재정의할 수 있습니다.
@@ -1733,7 +1736,7 @@
     </source>
         <target state="translated">  -profileEvaluation:&lt;file&gt;
                      MSBuild 평가를 프로파일링하고 결과를 지정된 파일에 기록합니다.
-                     지정된 파일의 확장명이 '.md'이면 
+                     지정된 파일의 확장명이 '.md'이면
                      결과가 Markdown 형식으로 생성됩니다.
                      그렇지 않으면 탭으로 구분된 파일이 생성됩니다.
     </target>
@@ -1752,9 +1755,9 @@
                        -restoreProperty:IsRestore=true;MyProperty=value
     </source>
         <target state="translated">  -restoreProperty:&lt;n&gt;=&lt;v&gt;
-                     복원하는 동안 프로젝트 수준 속성만 설정하거나 
-                     재정의하고, -property 인수로 지정된 속성을 
-                     사용하지 않습니다. &lt;n&gt;은 속성 이름이고 
+                     복원하는 동안 프로젝트 수준 속성만 설정하거나
+                     재정의하고, -property 인수로 지정된 속성을
+                     사용하지 않습니다. &lt;n&gt;은 속성 이름이고
                      &lt;v&gt;는 속성 값입니다.
                      세미콜론 또는 쉼표를 사용하여 여러 속성을 구분하거나,
                      각 속성을 개별적으로 지정합니다.
